--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>WebStudio</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
@@ -21,7 +21,7 @@
   </head>
   <body>
     <header class="top-header">
-      <div class="container">
+      <div class="container page-header-container">
         <nav class="menu">
           <a href="./index.html" class="logo"
             >Web<span class="accent-studio-header">Studio</span></a
@@ -32,6 +32,16 @@
             <li><a href="" class="nav-link">Contacts</a></li>
           </ul>
         </nav>
+        <button class="mobile-menu-open-btn" type="button">
+          <svg
+            class="mobile-menu-open-icon"
+            width="24"
+            height="24"
+            aria-label="mobile menu open icon"
+          >
+            <use href="./images/icons.svg#icon-burger"></use>
+          </svg>
+        </button>
 
         <address class="info">
           <ul class="info-list">
@@ -50,6 +60,7 @@
       </div>
     </header>
     <main>
+      <!--
       <section class="section-one">
         <div class="container">
           <h1 class="title">Effective Solutions for Your Business</h1>
@@ -592,6 +603,80 @@
           </div>
           <button class="review-form-submit-btn" type="submit">Send</button>
         </form>
+      </div>
+    </div>
+-->
+    <div class="mobile-menu-wrapper is-open">
+      <div class="container mobile-menu-container">
+        <button class="mobile-menu-close-btn" type="button">
+          <svg
+            class="mobile-menu-close-btn-icon"
+            width="8"
+            height="8"
+            aria-label="mobile menu close icon"
+          >
+            <use href="./images/icons.svg#icon-close"></use>
+          </svg>
+        </button>
+        <nav class="mobile-menu-navigation">
+          <ul class="mobile-menu">
+            <li class="mobile-menu-item">
+              <a href="./index.html" class="mobile-menu-link accent-color">Studio</a>
+            </li>
+            <li class="mobile-menu-item">
+              <a href="" class="mobile-menu-link">Portfolio</a>
+            </li>
+            <li class="mobile-menu-item">
+              <a href="" class="mobile-menu-link">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+
+        <address class="mobile-info">
+          <ul class="mobile-info-list">
+            <li>
+              <a href="mailto:info@devstudio.com" class="mobile-info-link accent-color"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a href="tel:+110001111111" class="mobile-info-link"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+
+        <ul class="mobile-social-media-list">
+          <li class="mobile-social-media-list-item">
+            <a href="" target="_blank" class="mobile-social-media-list-link">
+              <svg class="icons-social-media" width="24" height="24">
+                <use href="./images/icons.svg#icon-instagram"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="mobile-social-media-list-item">
+            <a href="" target="_blank" class="mobile-social-media-list-link">
+              <svg class="icons-social-media" width="24" height="24">
+                <use href="./images/icons.svg#icon-twitter"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="mobile-social-media-list-item">
+            <a href="" target="_blank" class="mobile-social-media-list-link">
+              <svg class="icons-social-media" width="24" height="24">
+                <use href="./images/icons.svg#icon-facebook"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="mobile-social-media-list-item">
+            <a href="" target="_blank" class="mobile-social-media-list-link">
+              <svg class="icons-social-media" width="24" height="24">
+                <use href="./images/icons.svg#icon-linkedin"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
       </div>
     </div>
   </body>
