--- a/index.html
+++ b/index.html
@@ -605,8 +605,8 @@
         </form>
       </div>
     </div>
--->
-    <div class="mobile-menu-wrapper is-open">
+
+    <div class="mobile-menu-wrapper">
       <div class="container mobile-menu-container">
         <button class="mobile-menu-close-btn" type="button">
           <svg
@@ -679,5 +679,6 @@
         </ul>
       </div>
     </div>
+    -->
   </body>
 </html>
