--- a/index.html
+++ b/index.html
@@ -59,14 +59,16 @@
         </address>
       </div>
     </header>
+
     <main>
-      <!--
+
       <section class="section-one">
         <div class="container">
           <h1 class="title">Effective Solutions for Your Business</h1>
           <button type="button" class="btn">Order Service</button>
         </div>
       </section>
+      
       <section class="section-two">
         <div class="container container-header">
           <h2 class="visually-hidden">Features</h2>
@@ -122,6 +124,7 @@
           </ul>
         </div>
       </section>
+      <!--
       <section class="section-three">
         <div class="container">
           <h2 class="section-three-title">Our Team</h2>
@@ -605,8 +608,9 @@
         </form>
       </div>
     </div>
-
-    <div class="mobile-menu-wrapper">
+-->
+<!--  
+    <div class="mobile-menu-wrapper is-open">
       <div class="container mobile-menu-container">
         <button class="mobile-menu-close-btn" type="button">
           <svg
@@ -621,7 +625,9 @@
         <nav class="mobile-menu-navigation">
           <ul class="mobile-menu">
             <li class="mobile-menu-item">
-              <a href="./index.html" class="mobile-menu-link accent-color">Studio</a>
+              <a href="./index.html" class="mobile-menu-link accent-color"
+                >Studio</a
+              >
             </li>
             <li class="mobile-menu-item">
               <a href="" class="mobile-menu-link">Portfolio</a>
@@ -635,7 +641,9 @@
         <address class="mobile-info">
           <ul class="mobile-info-list">
             <li>
-              <a href="mailto:info@devstudio.com" class="mobile-info-link accent-color"
+              <a
+                href="mailto:info@devstudio.com"
+                class="mobile-info-link accent-color"
                 >info@devstudio.com</a
               >
             </li>
