--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
     </header>
 
     <main>
+      <!--  
       <section class="section-one">
         <div class="container">
           <h1 class="title">Effective Solutions for Your Business</h1>
@@ -753,6 +754,7 @@
         </form>
       </div>
     </div>
+-->
     <div class="mobile-menu-wrapper is-open">
       <div class="container mobile-menu-container">
         <button class="mobile-menu-close-btn" type="button">
@@ -768,8 +770,8 @@
         <nav class="mobile-menu-navigation">
           <ul class="mobile-menu">
             <li class="mobile-menu-item">
-              <a href="./index.html" class="mobile-menu-link accent-color"
-                >Studio</a
+              <a href="./index.html" class="mobile-menu-link"
+                ><span class="mobile-menu-link-studio">Studio</span></a
               >
             </li>
             <li class="mobile-menu-item">
@@ -783,16 +785,17 @@
 
         <address class="mobile-info">
           <ul class="mobile-info-list">
+            
             <li>
-              <a
-                href="mailto:info@devstudio.com"
-                class="mobile-info-link accent-color"
-                >info@devstudio.com</a
+              <a href="tel:+110001111111" class="mobile-info-link"
+                ><span class="mobile-info-link-number">+11 (000) 111-11-11</span></a
               >
             </li>
             <li>
-              <a href="tel:+110001111111" class="mobile-info-link"
-                >+11 (000) 111-11-11</a
+              <a
+                href="mailto:info@devstudio.com"
+                class="mobile-info-link"
+                >info@devstudio.com</a
               >
             </li>
           </ul>
