--- a/index.html
+++ b/index.html
@@ -61,7 +61,6 @@
     </header>
 
     <main>
-      <!--  
       <section class="section-one">
         <div class="container">
           <h1 class="title">Effective Solutions for Your Business</h1>
@@ -754,7 +753,7 @@
         </form>
       </div>
     </div>
--->
+
     <div class="mobile-menu-wrapper is-open">
       <div class="container mobile-menu-container">
         <button class="mobile-menu-close-btn" type="button">
@@ -782,55 +781,55 @@
             </li>
           </ul>
         </nav>
+        <div class="mobile-contacts">
+          <address class="mobile-info">
+            <ul class="mobile-info-list">
+              <li>
+                <a href="tel:+110001111111" class="mobile-info-link"
+                  ><span class="mobile-info-link-number"
+                    >+11 (000) 111-11-11</span
+                  ></a
+                >
+              </li>
+              <li>
+                <a href="mailto:info@devstudio.com" class="mobile-info-link"
+                  >info@devstudio.com</a
+                >
+              </li>
+            </ul>
+          </address>
 
-        <address class="mobile-info">
-          <ul class="mobile-info-list">
-            
-            <li>
-              <a href="tel:+110001111111" class="mobile-info-link"
-                ><span class="mobile-info-link-number">+11 (000) 111-11-11</span></a
-              >
+          <ul class="mobile-social-media-list">
+            <li class="mobile-social-media-list-item">
+              <a href="" target="_blank" class="mobile-social-media-list-link">
+                <svg class="icons-social-media" width="24" height="24">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
             </li>
-            <li>
-              <a
-                href="mailto:info@devstudio.com"
-                class="mobile-info-link"
-                >info@devstudio.com</a
-              >
+            <li class="mobile-social-media-list-item">
+              <a href="" target="_blank" class="mobile-social-media-list-link">
+                <svg class="icons-social-media" width="24" height="24">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="mobile-social-media-list-item">
+              <a href="" target="_blank" class="mobile-social-media-list-link">
+                <svg class="icons-social-media" width="24" height="24">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="mobile-social-media-list-item">
+              <a href="" target="_blank" class="mobile-social-media-list-link">
+                <svg class="icons-social-media" width="24" height="24">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
             </li>
           </ul>
-        </address>
-
-        <ul class="mobile-social-media-list">
-          <li class="mobile-social-media-list-item">
-            <a href="" target="_blank" class="mobile-social-media-list-link">
-              <svg class="icons-social-media" width="24" height="24">
-                <use href="./images/icons.svg#icon-instagram"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="mobile-social-media-list-item">
-            <a href="" target="_blank" class="mobile-social-media-list-link">
-              <svg class="icons-social-media" width="24" height="24">
-                <use href="./images/icons.svg#icon-twitter"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="mobile-social-media-list-item">
-            <a href="" target="_blank" class="mobile-social-media-list-link">
-              <svg class="icons-social-media" width="24" height="24">
-                <use href="./images/icons.svg#icon-facebook"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="mobile-social-media-list-item">
-            <a href="" target="_blank" class="mobile-social-media-list-link">
-              <svg class="icons-social-media" width="24" height="24">
-                <use href="./images/icons.svg#icon-linkedin"></use>
-              </svg>
-            </a>
-          </li>
-        </ul>
+        </div>
       </div>
     </div>
   </body>
